# CitRad-SensorUnit

./: .gitignore  README.md  Teensy_fft.ino
FFT_visualisation/: FFT_visualisation.pde
Hardware/: .gitignore  README.md  SensorRadarMount.scad
Hardware/Radar_Amp/: BOM.xlsx  LNA_LPF.kicad_sch  Output.kicad_sch  Radar_Amp.csv  Radar_Amp.kicad_pcb  Radar_Amp.kicad_prl  Radar_Amp.kicad_pro  Radar_Amp.kicad_sch  Radar_Amp.xml  VGA.kicad_sch  fp-info-cache  fp-lib-table
Hardware/Radar_Amp/Simulation/: Audio_Output.raw  Input_Stage_10kHz.asc  Input_Stage_10kHz.op.raw  Input_Stage_10kHz_v2.asc  Input_Stage_10kHz_v2.op.raw  Input_Stage_10kHz_v2.raw  LC-Filter.asc  LC-Filter.op.raw  LC-Filter.raw  LC-Filter_2.asc  LC-Filter_2.op.raw  LC-Filter_2.raw  VGA_Potentiometer.asc  VGA_Potentiometer.op.raw  VGA_Potentiometer.plt  VGA_Potentiometer.raw
Hardware/Radar_Amp/Simulation/AD_Filter_Designer_10kHz_G=100/: ACAnalysis.asc  ACAnalysis.op.raw  StageB_LowPassSallenKeyGain_LT6236.asc  TransientAnalysis.asc
Hardware/Radar_Amp/Simulation/AD_Filter_Designer_15kHz/: ACAnalysis.asc  StageA_LowPassSallenKeyGain_LT6236.asc  StageC_LowPassSallenKeyGain_LT6236.asc  StageC_LowPassSallenKeyGain_LT6236.asy  StageD_LowPassSallenKeyGain_LT6236.asc
Hardware/Radar_Amp/bom/: ibom.html
Hardware/Radar_Amp/lib/: Bourns_PTV.stp
Hardware/Radar_Amp_v2/: BOM_Radar_Amp_v2.xlsx  Radar_Amp_v2.csv  Radar_Amp_v2.kicad_pcb  Radar_Amp_v2.kicad_prl  Radar_Amp_v2.kicad_pro  Radar_Amp_v2.kicad_sch  Radar_Amp_v2.xml  fp-info-cache  fp-lib-table  lpf.kicad_sch  output.kicad_sch  pre-amp.kicad_sch  vga.kicad_sch
Hardware/Radar_Amp_v2/Simulation/: Audio_Output.asc  Audio_Output.op.raw  Input_Stage_10kHz_v2.asc  Input_Stage_10kHz_v2.op.raw  Input_Stage_10kHz_v2.raw  LC-Filter_2.op.raw  LC-Filter_2.raw  NPN+Filter.asc  NPN+Filter.op.raw  NPN+Filter.raw  NPN.asc  NPN.op.raw  NPN.raw  VGA_TIA_Potentiometer.asc  VGA_TIA_Potentiometer.op.raw  VGA_TIA_Potentiometer.raw
Hardware/Radar_Amp_v2/Simulation/AD_Filter_Designer_10kHz_G=100/: ACAnalysis.raw  NoiseAnalysis.asc  StageA_LowPassSallenKeyGain_LT6236.asc  StageC_LowPassSallenKeyGain_LT6236.asc  StageD_LowPassSallenKeyGain_LT6236.asc
Hardware/Radar_Amp_v2/Simulation/AD_Filter_Designer_15kHz/: NoiseAnalysis.asc  StageB_LowPassSallenKeyGain_LT6236.asc  TransientAnalysis.asc
Hardware/Radar_Amp_v2/bom/: ibom.html
Hardware/Radar_Amp_v2/lib/: srf1006.stp
Hardware/Radar_Amp_v2/lib/radaramp_footprints.pretty/: Bourns_PTV112-4_Dual.kicad_mod  Bourns_SRF1006.kicad_mod
Software/: .gitignore  Software.ino  Teensy_prototype.ino  functions.cpp  functions.h  noise_floor.cpp  noise_floor.h  read_binary_file.R
Software/FFT_visualisation/: FFT_visualisation.pde
Software/cairoCompanion/: CMakeLists.txt  InputStream.hpp  main.cpp
Software/cairoCompanion/gfx/: SpectrumColorizer.cpp  SpectrumColorizer.hpp
Software/companion/: InputStream.cpp  main.cpp
Software/companion/data/: config.txt  unit_xy_cars_2019-01-01_00-00-16.csv  unit_xy_metrics_2019-01-01_00-00-10.csv
Software/companion/gfx/: SpectrumColorizer.cpp  SpectrumColorizer.hpp  SpectrumVisualizer.cpp  SpectrumVisualizer.hpp
Software/data processing method/: .gitattributes  .gitignore  .renvignore  README.md  data_processing_method.Rmd  functions.R  read_and_display_raw_spectrum.Rmd  style.css  subtract_ghost_signal.html  subtract_ghost_signal.qmd
Software/data processing method/data/Nordring/: metrics_2024-3-29_12-8-50.csv
Software/mobileCompanion/: .clang-format  CMakeLists.txt  Makefile
Software/mobileCompanion/android_sources/: build.gradle.in
Software/mobileCompanion/android_sources/res/drawable/: splash.xml
Software/mobileCompanion/android_sources/src/: Serial.java
Software/mobileCompanion/qml/: CommandSelector.qml  DetectionVisualizer.qml  DeviceSelector.qml  Main.qml  Style.qml  qml.qrc
Software/mobileCompanion/qml/components/: Button.qml  ImageRoll.qml  TabButton.qml
Software/mobileCompanion/src/: AndroidTest.cpp  AndroidTest.hpp  DevicesController.cpp  DevicesController.hpp  LogModel.cpp  LogModel.hpp  QmlApi.cpp  QmlApi.hpp  ResultModel.cpp  ResultModel.hpp  SpectrumController.cpp  SpectrumController.hpp  debug.cpp  debug.hpp  main.cpp
Software/mobileCompanion/src/devices/: AndroidSerialDeviceManager.cpp  AndroidSerialDeviceManager.hpp  IDeviceManager.hpp  InputStream.cpp  InputStream.hpp  QtSerialDeviceManager.cpp  QtSerialDeviceManager.hpp
Software/mobileCompanion/src/gfx/: ImageDisplay.cpp  ImageDisplay.hpp  ImageProvider.cpp  ImageProvider.hpp  ResultVisualizer.cpp  ResultVisualizer.hpp  SpectrumColorizer.cpp  SpectrumColorizer.hpp  SpectrumVisualizer.cpp  SpectrumVisualizer.hpp
Software/mobileCompanion/tests/shared/: CMakeLists.txt  utest_FiFo.cpp
Software/sensor/: AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  Config.cpp  Config.h  Config.hpp  FileFormats.md  FileIO.cpp  FileIO.hpp  FileWriter.cpp  FileWriter.hpp  Makefile  RingBuffer.hpp  SerialIO.cpp  SerialIO.hpp  SignalAnalyzer.cpp  SignalAnalyzer.hpp  functions.cpp  functions.h  noise_floor.cpp  noise_floor.h  remap.hpp  sensor.ino  statistics.cpp  statistics.hpp  todo
Software/shared/: FiFo.hpp  RingBuffer.hpp  SignalAnalyzer.cpp  SignalAnalyzer.hpp  remap.hpp  statistics.cpp  statistics.hpp
Teensy_prototype/: README.md  Teensy_fft.ino  Teensy_prototype.ino  read_binary_file.R
Teensy_prototype/FFT_visualisation/: .gitignore  FFT_visualisation.pde
webApp/: .gitignore  README.md  global.R  server.R  ui.R
